src/components/Filter/filter.module.css
.filter{
	/* padding: 1rem; */
	border-bottom: 1px solid var(--purple);
	max-width: 1200px;
	margin: 1rem auto;

	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}
.filter fieldset{
	border: none;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	width: 100%;
}
.filter label{
	margin: 1rem 2rem 1rem 0;
	display: flex;
	flex-direction: column;
}
.filter label span{
	margin-bottom: 5px;
	color: var(--purple);
	font-weight: bold;
	font-size: .8rem;
}

@media (prefers-color-scheme: dark) {
	.filter label span{
		color: var(--alt);
	}
}

@media only screen and (max-width: 600px){
	.filter{
		position: fixed;
		height: auto;
		min-height: 50px;
		width: 100%;
		margin-bottom: 0;
		bottom: 0;
		left: 0;
		background: #fff;
		box-shadow: 0 -2px 4px var(--bgOpacity);
		padding: .4rem 1rem;

		z-index: 1001;
	}
	.filter .options{
		padding: .5rem 0;
	}
	.filter .options.hide{
		display: none;
	}
	.filter .button{
		background: var(--gradient);
		border: none;
		outline: none;
		display: flex;
		align-items: center;
		padding: .5rem;
		border-radius: 4px;
		font-size: 1rem;

	}
	.filter .icon{
		margin-left: auto;
		margin-right: 5px;
	}
	
}

